objects/Account_Home__dll.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSource__c</fullName>
        <label>Account Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_c__c</fullName>
        <label>Active</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingGeocodeAccuracy__c</fullName>
        <label>Billing Geocode Accuracy</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingLatitude__c</fullName>
        <label>Billing Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLongitude__c</fullName>
        <label>Billing Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>Billing State/Province</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleanStatus__c</fullName>
        <label>Clean Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerPriority_c__c</fullName>
        <label>Customer Priority</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Account Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DunsNumber__c</fullName>
        <label>D-U-N-S Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Account Fax</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Account ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <label>Deleted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JigsawCompanyId__c</fullName>
        <label>Jigsaw Company ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <label>Data.com Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <label>Last Modified By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <label>Last Referenced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <label>Master Record ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaicsCode__c</fullName>
        <label>NAICS Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaicsDesc__c</fullName>
        <label>NAICS Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Account Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <label>Employees</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations_c__c</fullName>
        <label>Number of Locations</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>Parent Account ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Account Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <label>Photo URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Account Rating</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate_c__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber_c__c</fullName>
        <label>SLA Serial Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_c__c</fullName>
        <label>SLA</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingGeocodeAccuracy__c</fullName>
        <label>Shipping Geocode Accuracy</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingLatitude__c</fullName>
        <label>Shipping Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingLongitude__c</fullName>
        <label>Shipping Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>Shipping State/Province</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <label>Shipping Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SicDesc__c</fullName>
        <label>SIC Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sic__c</fullName>
        <label>SIC Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Account Site</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TickerSymbol__c</fullName>
        <label>Ticker Symbol</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradestyle__c</fullName>
        <label>Tradestyle</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Account Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity_c__c</fullName>
        <label>Upsell Opportunity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YearStarted__c</fullName>
        <label>Year Started</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>